It is prettier but a problem is here : behaviorsuject keeps resetting

--- a/src/components/add-participants/add-participants.component.html
+++ b/src/components/add-participants/add-participants.component.html
@@ -10,6 +10,6 @@
     </a>
   </div>
   @for (item of users; track item.id){
-  <app-add-participants-line [participant] ="item"></app-add-participants-line>
+  <app-add-participants-line [user] ="item"></app-add-participants-line>
   }
 </div>
