--- a/src/components/expenses-flow/expenses-flow.component.html
+++ b/src/components/expenses-flow/expenses-flow.component.html
@@ -3,7 +3,7 @@
       <table class="table-auto w-full text-left whitespace-no-wrap">
         <thead>
         <tr>
-          <th class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100 rounded-tl rounded-bl">Label</th>
+          <th class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100 rounded-tl rounded-bl">Expenses</th>
           <th class="w-10 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100 rounded-tr rounded-br"></th>
         </tr>
         </thead>
