--- a/src/components/add-participants-line/add-participants-line.component.html
+++ b/src/components/add-participants-line/add-participants-line.component.html
@@ -7,15 +7,15 @@
           </div>
           <div class="flex-1 min-w-0 ms-4">
             <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
-              {{ participant.nickname }}
+              {{ user.nickname }}
             </p>
-            <input type="number" id="number-input" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required>
+            <input type="number" id="number-input" [(ngModel)]="budget" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required>
           </div>
-          <div class="flex-1 min-w-0 ms-4 text-base font-semibold text-gray-900 dark:text-black">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-              {{ participant.nickname }}
+          <div class="flex-1 min-w-0 ms-4 text-base font-semibold text-gray-900 dark:text-white">
+            <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+              {{ budget }}
             </p>
-            <button class="flex-1 min-w-0 ms-4 text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">ADD</button>
+            <button (click)="addParticipant(user.id)" class="flex-1 min-w-0 ms-4 text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">ADD</button>
           </div>
         </div>
       </li>
