--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -8,7 +8,9 @@
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
       <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page"> Login </a>
+      &nbsp;&nbsp;
       <a routerLink="/expenses" routerLinkActive="active" ariaCurrentWhenActive="page"> Expenses </a>
+      &nbsp;&nbsp;
       <a routerLink="/create" routerLinkActive="active" ariaCurrentWhenActive="page"> Create </a>
     </nav>
   </div>
