Got the participants list working, need to work on nickname

--- a/src/components/participants/participants.component.html
+++ b/src/components/participants/participants.component.html
@@ -1,18 +1,20 @@
 <div class="flow-root">
   <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
     <li class="py-3 sm:py-4">
-      <div class="flex items-center">
-        <div class="flex-1 min-w-0 ms-4">
-          @for (item of lstOfAddedParticipants | async ; track item.budgetByMonth){
-            <div class="flex-shrink-0">
-              <img class="w-8 h-8 rounded-full" src="https://www.svgrepo.com/download/2576/money.svg" alt="Neil image">
+      @for (item of lstOfAddedParticipants | async ; track item.budgetByMonth){
+        <div class="flex items-center">
+            <div class="flex-1 min-w-0 ms-4">
+              <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+                <img class="w-8 h-8 rounded-full" src="https://www.svgrepo.com/download/2576/money.svg" alt="Neil image">
+              </p>
             </div>
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
-            {{item.budgetByMonth }}
-            </p>
-          }
-        </div>
-      </div>
+            <div class="flex-1 min-w-0 ms-4 text-base font-semibold text-gray-900 dark:text-white">
+              <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
+                {{item.user}} {{item.budgetByMonth }}
+              </p>
+            </div>
+          </div>
+      }
     </li>
   </ul>
 </div>
