--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /*!
 * Start Bootstrap - Bare v5.0.9 (https://startbootstrap.com/template/bare)
 * Copyright 2013-2023 Start Bootstrap
