--- a/src/components/expenses-flow/expenses-flow.component.html
+++ b/src/components/expenses-flow/expenses-flow.component.html
@@ -1,5 +1,5 @@
 <section class="text-gray-600 body-font">
-    <div class="lg:w-2/3 w-full mx-auto overflow-auto">
+    <div class="max-w-sm mx-auto overflow-auto">
       <table class="table-auto w-full text-left whitespace-no-wrap">
         <thead>
         <tr>
