--- a/src/components/add-participants-group/add-participants-group.component.html
+++ b/src/components/add-participants-group/add-participants-group.component.html
@@ -15,7 +15,7 @@
             <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
               {{ budget }}
             </p>
-            <button (click)="addParticipant(user.idUser)" class="flex-1 min-w-0 ms-4 text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">ADD</button>
+            <button (click)="addParticipant(user.id)" class="flex-1 min-w-0 ms-4 text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">ADD</button>
           </div>
         </div>
       </li>
