--- a/src/components/add-participants/add-participants.component.html
+++ b/src/components/add-participants/add-participants.component.html
@@ -10,7 +10,7 @@
     </a>
   </div>
   @if (users | async; as users ) {
-  @for (item of users | async; track item.idUser){
+  @for (item of users | async; track item.id){
   <app-add-participants-line [user] ="item"></app-add-participants-line>
   }
   }
