--- a/src/components/api-tester/api-tester.component.html
+++ b/src/components/api-tester/api-tester.component.html
@@ -18,7 +18,7 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-10 mx-auto">
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
-      @for (item of users ; track item.idUser){
+      @for (item of users ; track item.id){
         <div class="sm:w-1/2 mb-10 px-4">
           <div class="rounded-lg h-64 overflow-hidden">
             <img alt="content" class="object-cover object-center h-full w-full" [src]="item.image">
@@ -34,7 +34,7 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-10 mx-auto">
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
-      @for (item of usersObservable$ | async ; track item.idUser){
+      @for (item of usersObservable$ | async ; track item.id){
         <div class="sm:w-1/2 mb-10 px-4">
           <div class="rounded-lg h-64 overflow-hidden">
             <img alt="content" class="object-cover object-center h-full w-full" [src]="item.image">
@@ -50,9 +50,9 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-10 mx-auto">
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
-      @for (item of expensesObservableList | async ; track item.idExpense){
+      @for (item of expensesObservableList | async ; track item.id){
         <div class="sm:w-1/2 mb-10 px-4">
-          <p class="leading-relaxed text-base">{{ item.expenseName }}</p>
+          <p class="leading-relaxed text-base">{{ item.name }}</p>
         </div>
       }
     </div>
