--- a/src/components/groups-flow/groups-flow.component.html
+++ b/src/components/groups-flow/groups-flow.component.html
@@ -9,14 +9,14 @@
         </tr>
         </thead>
         <tbody>
-        @if (expenses$ | async ; as expenses) {
-          @for (expense of expenses; track expense.expenseName) {
+        @if (groups$ | async ; as expenses) {
+          @for (expense of expenses; track expense.name) {
             <tr>
-              <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">{{ expense.expenseName }}</td>
+              <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">{{ expense.name }}</td>
               <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">{{ expense.balance }}</td>
               <td class="border-t-2 border-b-2 border-gray-200 w-10 text-center">
                 <a routerLink="/expenses/detail" routerLinkActive="active" ariaCurrentWhenActive="page">
-                  <button (click)="setExpenseAtService(expense.idExpense)" class="flex ml-auto text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">GO</button>
+                  <button (click)="setGroupAtService(expense.id)" class="flex ml-auto text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">GO</button>
                 </a>
               </td>
             </tr>
