--- a/src/components/login-page/login-page.component.html
+++ b/src/components/login-page/login-page.component.html
@@ -1,7 +1,7 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-10 mx-auto">
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
-      @for (item of users$ | async ; track item.idUser){
+      @for (item of users$ | async ; track item.id){
         <div class="sm:w-1/2 mb-10 px-4">
           <div class="rounded-lg h-64 overflow-hidden">
             <img alt="content" class="object-cover object-center h-full w-full" [src]="item.image">
@@ -9,7 +9,7 @@
           <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">{{ item.username.toUpperCase() }}</h2>
           <p class="leading-relaxed text-base">{{ item.quote }}</p>
           <a routerLink="/password" routerLinkActive="active" ariaCurrentWhenActive="page">
-            <button (click)="updateUserOnline(item.idUser)" class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">This is me</button>
+            <button (click)="updateUserOnline(item.id)" class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">This is me</button>
           </a>
         </div>
       }
