--- a/src/components/groups-flow/groups-flow.component.html
+++ b/src/components/groups-flow/groups-flow.component.html
@@ -9,15 +9,17 @@
         </tr>
         </thead>
         <tbody>
-        @if (groups$ | async ; as expenses) {
-          @for (expense of expenses; track expense.name) {
+        @if (groups$ | async ; as groups) {
+          @for (group of groups; track group.id) {
             <tr>
-              <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">{{ expense.name }}</td>
-              <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">{{ expense.balance }}</td>
+              <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">{{ group.name }}</td>
+              <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">{{ group.balance }}</td>
               <td class="border-t-2 border-b-2 border-gray-200 w-10 text-center">
+                @if (group.id) {
                 <a routerLink="/expenses/detail" routerLinkActive="active" ariaCurrentWhenActive="page">
-                  <button (click)="setGroupAtService(expense.id)" class="flex ml-auto text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">GO</button>
+                  <button (click)="setGroupAtService(group.id)" class="flex ml-auto text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">GO</button>
                 </a>
+                }
               </td>
             </tr>
           }
