Understanding Observables from HTTP requests

--- a/src/components/login-page/login-page.component.html
+++ b/src/components/login-page/login-page.component.html
@@ -13,6 +13,18 @@
           </a>
         </div>
       }
+      @for (item of users ; track item.id){
+        <div class="sm:w-1/2 mb-10 px-4">
+          <div class="rounded-lg h-64 overflow-hidden">
+            <img alt="content" class="object-cover object-center h-full w-full" [src]="item.image">
+          </div>
+          <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">{{ item.username.toUpperCase() }}</h2>
+          <p class="leading-relaxed text-base">{{ item.quote }}</p>
+          <a routerLink="/password" routerLinkActive="active" ariaCurrentWhenActive="page">
+            <button (click)="updateUserOnline(item.id)" class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">This is me</button>
+          </a>
+        </div>
+      }
     </div>
   </div>
 </section>
