--- a/src/components/group/group.component.html
+++ b/src/components/group/group.component.html
@@ -1,16 +1,18 @@
 <div class="max-w-sm mx-auto">
-@if (group$ | async ; as groups){
+@if (group$ | async ; as group){
   <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700">
 
     <div class="grid grid-cols-2 justify-items-stretch">
       <div>
         <h5 class="mb-3 text-base font-semibold text-gray-900 md:text-xl dark:text-black">
-          {{groups.name}}
+          {{group.name}}
         </h5>
-        <p class="text-sm font-normal text-gray-500 dark:text-gray-400">{{groups.description}}</p>
+        <p class="text-sm font-normal text-gray-500 dark:text-gray-400">{{group.description}}</p>
       </div>
       <div class="place-self-end">
-        <button class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">+</button>
+        <a routerLink="newexpense" [queryParams]="{ group: group }">
+          <button class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">+</button>
+        </a>
       </div>
     </div>
     <div class="grid grid-cols-6 justify-items-center mt-4">
@@ -38,12 +40,12 @@
 
   @if (expenses$ | async; as expenses){
   <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700">
-  <app-expense-statistics [group]="groups" [expenses]="expenses"></app-expense-statistics>
+  <app-expense-statistics [group]="group" [expenses]="expenses"></app-expense-statistics>
   </div>
 
   <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700">
     <h5 class="mb-3 text-base font-semibold text-gray-900 md:text-xl dark:text-black">
-      Filtered Expenses
+      Monthly expenses
     </h5>
     <ul class="my-4 space-y-3">
       @for (expense of expenses; track expense.id){
@@ -64,5 +66,6 @@
   }
 }
 </div>
+
 
 
