--- a/src/components/group/group.component.html
+++ b/src/components/group/group.component.html
@@ -10,7 +10,7 @@
         <p class="text-sm font-normal text-gray-500 dark:text-gray-400">{{group.description}}</p>
       </div>
       <div class="place-self-end">
-        <a routerLink="newexpense" [queryParams]="{ group: group }">
+        <a routerLink="newexpense">
           <button class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">+</button>
         </a>
       </div>
