Front: creation of expense is function with interface

--- a/src/components/details/detail.component.html
+++ b/src/components/details/detail.component.html
@@ -16,7 +16,7 @@
               </h5>
             </div>
           </div>
-          <p>{{ expense.value }} &euro; payed by {{ expense.payor.username }} </p>
+          <p>{{ expense.value }} &euro; payed by {{ expense.payor?.username }} </p>
           }
         </div>
       </div>
