--- a/src/components/create-expense/create-expense.component.html
+++ b/src/components/create-expense/create-expense.component.html
@@ -39,7 +39,7 @@
             <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
               <label for="paid">Paid by</label>
             </p>
-            <select id="paid"  name="paid" class="form-group" id="payor" required [(ngModel)]="expense.payor" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <select id="paid" name="paid" class="form-group" id="payor" required [(ngModel)]="expense.payorId" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
               <option *ngFor="let participant of group.participantList" [value]="participant.id">{{ participant.user.username }}</option>
             </select>
           </div>
