--- a/src/components/create-group/create-group.component.html
+++ b/src/components/create-group/create-group.component.html
@@ -6,7 +6,7 @@
 <div class="w-full mb-3 max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
 <form class="max-w-sm mx-auto" #newGroup="ngForm" (ngSubmit)="createNewGroup(newGroup.value)">
   <div class="mb-3">
-    <label for="newExpenseLabelInput" class="block mb-2 text-gray-600 body-font text-gray-900">Label {{model.label}}</label>
+    <label for="newExpenseLabelInput" class="block mb-2 text-gray-600 body-font text-gray-900">Label</label>
     <input id="label" [(ngModel)]="model.label" name="label" type="text" id="newExpenseLabelInput" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
   </div>
   <div class="mb-3">
@@ -14,8 +14,14 @@
     <input id="description" [(ngModel)]="model.description" name="description" type="text" id="newExpenseDescriptionInput" class="block w-full p-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500">
   </div>
 
-  <button class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Create</button>
-
+  <div class="flex items-center justify-between mb-4">
+    <div>
+      <button type="submit" class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Create</button>
+    </div>
+    <div>
+      <button type="button" (click)="cancelCreation()" class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Cancel</button>
+    </div>
+  </div>
 </form>
 </div>
 </div>
