--- a/src/components/login-page/login-page.component.html
+++ b/src/components/login-page/login-page.component.html
@@ -1,5 +1,8 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-10 mx-auto">
+    @if (message != null){
+        <p>{{ message }}</p>
+    }
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
       @for (item of users$ | async ; track item.id){
         <div class="sm:w-1/2 mb-10 px-4">
