--- a/src/components/modify-expense/modify-expense.component.html
+++ b/src/components/modify-expense/modify-expense.component.html
@@ -35,13 +35,10 @@
             <input [(ngModel)]="expenseToUpdate.date" type="date" id="date" name="date" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-white dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="90210" required>
           </div>
 
-          <div class="flex-1 min-w-0">
+          <div class="flex-1 min-w-0 pt-3">
             <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
-              <label for="paid">Paid by</label>
+              Paid by {{ this.expense?.payor?.username }}
             </p>
-            <select id="paid" name="paid" class="form-group" id="payor" required [(ngModel)]="expenseToUpdate.payorId" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-              <option *ngFor="let participant of group.participantList" [value]="participant.id">{{ participant.user.username }}</option>
-            </select>
           </div>
         </div>
 
@@ -92,7 +89,7 @@
 
           <div>
             <a href="#">
-              <button type="submit"  class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Create</button>
+              <button type="submit"  class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Save</button>
             </a>
           </div>
         </div>
