--- a/src/components/group/group.component.html
+++ b/src/components/group/group.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="place-self-end">
         <a routerLink="newexpense">
-          <button class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">+</button>
+          <img src="https://cdn1.iconfinder.com/data/icons/finance-essentials-vol-02-2/44/add-include-amount-coins-money-512.png" alt="" width="50px" height="50px">
         </a>
       </div>
     </div>
@@ -58,10 +58,6 @@
         </li>
       }
     </ul>
-    <div>
-      <a href="#" class="inline-flex items-center text-xs font-normal text-gray-500 hover:underline dark:text-gray-400">
-        Delete</a>
-    </div>
   </div>
   }
 }
