--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -7,12 +7,14 @@
       <span class="ml-3 text-xl">{{ applicationName }}</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page"> Login </a>
       &nbsp;&nbsp;@if (loggedUserBoolean){
       <a routerLink="/expenses" routerLinkActive="active" ariaCurrentWhenActive="page"> Groups </a>
       &nbsp;&nbsp;
       <a routerLink="/create" routerLinkActive="active" ariaCurrentWhenActive="page"> Create </a>
+      &nbsp;&nbsp;
+      <a (click)="logout()" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page"> Logout </a>
     }
+
     </nav>
   </div>
 </header>
