--- a/src/components/login-page/login-page.component.html
+++ b/src/components/login-page/login-page.component.html
@@ -1,7 +1,10 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-10 mx-auto">
     @if (message != null){
+      <div class="text-center mb-4">
         <p>{{ message }}</p>
+      </div>
+
     }
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
       @for (item of users$ | async ; track item.id){
