--- a/src/components/modify-expense/modify-expense.component.html
+++ b/src/components/modify-expense/modify-expense.component.html
@@ -2,17 +2,24 @@
     <div class="p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 dark:bg-gray-800 dark:border-gray-700">
       @if (group){
         @if (expenseToUpdate){
-      <form class="max-w-sm mx-auto" #newExpense="ngForm" (ngSubmit)="createNewExpense()">
 
-        <div class="grid grid-cols-1 justify-items-stretch">
-          <div>
-            <h5 class="mb-3 text-base font-semibold text-gray-900 md:text-xl dark:text-black">
-              {{group.name}}
-            </h5>
-            <p class="text-sm font-normal text-gray-500 dark:text-gray-400">{{group.description}}</p>
+
+
+          <div class="grid grid-cols-2 justify-items-stretch">
+            <div>
+              <h5 class="mb-3 text-base font-semibold text-gray-900 md:text-xl dark:text-black">
+                {{group.name}}
+              </h5>
+              <p class="text-sm font-normal text-gray-500 dark:text-gray-400">{{group.description}}</p>
+            </div>
+            <div class="place-self-end">
+              <a routerLink="newexpense">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Icons8_flat_delete_generic.svg" alt="" width="50px" height="50px">
+              </a>
+            </div>
           </div>
-        </div>
 
+          <form class="max-w-sm mx-auto" #newExpense="ngForm" (ngSubmit)="saveExpense()">
         <div class="py-3 sm:py-4">
           <div class="flex-1 min-w-0">
             <p class="text-sm font-medium text-gray-900 truncate dark:text-black">
@@ -83,13 +90,13 @@
         <div class="grid grid-cols-2 justify-items-stretch p-2">
           <div>
             <a href="#">
-              <button type="button" class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Cancel</button>
+              <button type="button" class="flex mx-auto mt-6 font-bold text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Cancel</button>
             </a>
           </div>
 
           <div>
             <a href="#">
-              <button type="submit"  class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Save</button>
+              <button type="submit"  class="flex mx-auto font-bold mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Save</button>
             </a>
           </div>
         </div>
