Delete expense is OK

--- a/src/components/details/detail.component.html
+++ b/src/components/details/detail.component.html
@@ -41,9 +41,7 @@
         </div>
 
         <div>
-          <a href="#">
-            <p class="text-right text-xs font-normal text-gray-500 hover:underline dark:text-gray-400">Delete</p>
-          </a>
+            <p (click)="delete()" class="text-right text-xs font-normal text-gray-500 hover:underline dark:text-gray-400">Delete</p>
         </div>
       </div>
     </div>
