--- a/src/components/modify-expense/modify-expense.component.html
+++ b/src/components/modify-expense/modify-expense.component.html
@@ -10,7 +10,7 @@
               <p class="text-sm font-normal text-gray-500 dark:text-gray-400">{{group.description}}</p>
             </div>
             <div class="place-self-end">
-              <a routerLink="newexpense">
+              <a (click)="delete()" routerLink="newexpense">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Icons8_flat_delete_generic.svg" alt="" width="50px" height="50px">
               </a>
             </div>
