New look before cgt NgModel to FormControl

--- a/src/components/create-expense/create-expense.component.html
+++ b/src/components/create-expense/create-expense.component.html
@@ -86,12 +86,12 @@
         <div class="grid grid-cols-2 justify-items-stretch p-2">
           <div>
             <a href="#">
-              <button type="submit"  class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Create</button>
+              <button type="submit" class="flex mx-auto mt-6 text-white bg-green-900 border-0 py-2 px-5 focus:outline-none rounded">Create</button>
             </a>
           </div>
           <div>
             <a href="#">
-              <button (click)="cancel()" type="reset" class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">Cancel</button>
+              <button (click)="cancel()" type="reset" class="flex mx-auto mt-6 text-white bg-gray-900 border-0 py-2 px-5 focus:outline-none rounded">Cancel</button>
             </a>
           </div>
         </div>
