--- a/src/components/groups-flow/groups-flow.component.html
+++ b/src/components/groups-flow/groups-flow.component.html
@@ -1,22 +1,36 @@
-<section class="text-gray-600 body-font">
-    <div class="max-w-sm mx-auto overflow-auto">
-      <table class="table-auto w-full text-left whitespace-no-wrap">
-        <tbody>
+<section class="text-white body-font">
+      <div class="w-full text-sm text-left rtl:text-right text-white">
         @if (groups$ | async ; as groups) {
           @for (group of groups; track group.id) {
-            <tr>
-              <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">{{ group.name }}</td>
-              <td class="border-t-2 border-b-2 border-gray-200 w-10 text-center">
-                @if (group.id) {
-                <a routerLink="/expenses/detail" routerLinkActive="active" ariaCurrentWhenActive="page">
-                  <button (click)="setGroupAtService(group.id)" class="flex ml-auto text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">GO</button>
-                </a>
-                }
-              </td>
-            </tr>
+            <div class="border-b border-gray-200 dark:border-gray-700">
+              @if (group.id) {
+              <a (click)="setGroupAtService(group.id)" routerLink="/expenses/detail" routerLinkActive="active" ariaCurrentWhenActive="page">
+               <div class="grid grid-cols-2 justify-items-center">
+                  <div class="col-span-1 px-6 py-4 justify-self-start font-normal text-white whitespace-nowrap ">
+                    <p class="leading-relaxed text-base">{{ group.name }}</p>
+                  </div>
+                  <div class="col-span-1 px-6 py-4 justify-self-end font-medium text-gray-900 whitespace-nowrap ">
+                    <svg class="w-[30px] h-[30px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
+                    </svg>
+                  </div>
+               </div>
+              </a>
+              }
+            </div>
           }
         }
-        </tbody>
-      </table>
-    </div>
+      </div>
+      <a routerLink="/create" routerLinkActive="active" ariaCurrentWhenActive="page">
+        <div class="mx-4 py-2 grid grid-rows-2 justify-content-center justify-items-center rounded-lg shadow mt-3 bg-gray-900">
+          <div class="grid row-span-1">
+            <svg class="w-[30px] h-[30px] text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+              <path fill-rule="evenodd" d="M12 6a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm-1.5 8a4 4 0 0 0-4 4 2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-3Zm6.82-3.096a5.51 5.51 0 0 0-2.797-6.293 3.5 3.5 0 1 1 2.796 6.292ZM19.5 18h.5a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-1.1a5.503 5.503 0 0 1-.471.762A5.998 5.998 0 0 1 19.5 18ZM4 7.5a3.5 3.5 0 0 1 5.477-2.889 5.5 5.5 0 0 0-2.796 6.293A3.501 3.501 0 0 1 4 7.5ZM7.1 12H6a4 4 0 0 0-4 4 2 2 0 0 0 2 2h.5a5.998 5.998 0 0 1 3.071-5.238A5.505 5.505 0 0 1 7.1 12Z" clip-rule="evenodd"/>
+            </svg>
+          </div>
+          <div class="grid row-span-1">
+           <p class="text-white"> New Group </p>
+         </div>
+        </div>
+      </a>
 </section>
