--- a/src/components/login-page/login-page.component.html
+++ b/src/components/login-page/login-page.component.html
@@ -1,21 +1,25 @@
-<section class="text-gray-600 body-font">
-  <div class="container px-5 py-10 mx-auto">
+<section class="text-gray-600 body-font bg-gray-800">
+  <div class="container px-1 py-10 mx-auto">
     @if (message != null){
-      <div class="text-center mb-4">
-        <p>{{ message }}</p>
+      <div class="mb-5 items-center flex justify-content-center">
+        <button class="button">
+          <span>{{ message }}</span>
+          <span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-miterlimit="2" stroke-linejoin="round" fill-rule="evenodd" clip-rule="evenodd"><path fill-rule="nonzero" d="m12.002 2.005c5.518 0 9.998 4.48 9.998 9.997 0 5.518-4.48 9.998-9.998 9.998-5.517 0-9.997-4.48-9.997-9.998 0-5.517 4.48-9.997 9.997-9.997zm0 1.5c-4.69 0-8.497 3.807-8.497 8.497s3.807 8.498 8.497 8.498 8.498-3.808 8.498-8.498-3.808-8.497-8.498-8.497zm0 7.425 2.717-2.718c.146-.146.339-.219.531-.219.404 0 .75.325.75.75 0 .193-.073.384-.219.531l-2.717 2.717 2.727 2.728c.147.147.22.339.22.531 0 .427-.349.75-.75.75-.192 0-.384-.073-.53-.219l-2.729-2.728-2.728 2.728c-.146.146-.338.219-.53.219-.401 0-.751-.323-.751-.75 0-.192.073-.384.22-.531l2.728-2.728-2.722-2.722c-.146-.147-.219-.338-.219-.531 0-.425.346-.749.75-.749.192 0 .385.073.531.219z"></path></svg>
+          </span>
+        </button>
       </div>
-
     }
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
       @for (item of users$ | async ; track item.id){
-        <div class="sm:w-1/2 mb-10 px-4">
+        <div class="sm:w-1/2 mb-10 px-4 text-white">
           <div class="rounded-lg h-64 overflow-hidden">
             <img alt="content" class="object-cover object-center h-full w-full" [src]="item.image">
           </div>
-          <h2 class="title-font text-2xl font-medium text-gray-900 mt-6 mb-3">{{ item.username.toUpperCase() }}</h2>
+          <h2 class="title-font text-2xl font-medium text-white0 mt-6 mb-3">{{ item.username.toUpperCase() }}</h2>
           <p class="leading-relaxed text-base">{{ item.quote }}</p>
           <a routerLink="/password" routerLinkActive="active" ariaCurrentWhenActive="page">
-            <button (click)="updateUserOnline(item.id)" class="flex mx-auto mt-6 text-white bg-yellow-500 border-0 py-2 px-5 focus:outline-none hover:bg-yellow-600 rounded">This is me</button>
+            <button (click)="updateUserOnline(item.id)" class="flex mx-auto mt-6 text-white bg-gray-900 border-0 py-2 px-5 rounded">This is me</button>
           </a>
         </div>
       }
