Dynamic input changes

--- a/src/components/group/group.component.html
+++ b/src/components/group/group.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="p-4 bg-gray-800 rounded-lg shadow sm:p-6">
+  <div class="p-4 bg-gray-800 rounded-lg sm:p-6">
     <div class="grid grid-cols-6 justify-items-center">
       <div class="col-start-1 col-end-2 text-2xl font-bold align-items-center " xmlns:x-on="http://www.w3.org/1999/xhtml">
         <button (click)="setMonthDown()" class="p-2 border rounded-full bg-gray-100">
