--- a/src/components/login-page/login-page.component.html
+++ b/src/components/login-page/login-page.component.html
@@ -1,7 +1,21 @@
 <section class="text-gray-600 body-font bg-gray-800">
-  <div class="container px-1 py-10 mx-auto">
-    @if (message != null){
-      <div class="mb-5 items-center flex justify-content-center">
+  <div class="container px-1 py-1 mx-auto">
+    @defer{
+      <a routerLink="/newuser" routerLinkActive="active" ariaCurrentWhenActive="page">
+        <div class="py-2 grid grid-rows-2 justify-content-center justify-items-center rounded-lg shadow m-3 bg-gray-800">
+          <div class="grid row-span-1">
+            <svg class="w-[30px] h-[30px] text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+              <path fill-rule="evenodd" d="M12 6a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7Zm-1.5 8a4 4 0 0 0-4 4 2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-3Zm6.82-3.096a5.51 5.51 0 0 0-2.797-6.293 3.5 3.5 0 1 1 2.796 6.292ZM19.5 18h.5a2 2 0 0 0 2-2 4 4 0 0 0-4-4h-1.1a5.503 5.503 0 0 1-.471.762A5.998 5.998 0 0 1 19.5 18ZM4 7.5a3.5 3.5 0 0 1 5.477-2.889 5.5 5.5 0 0 0-2.796 6.293A3.501 3.501 0 0 1 4 7.5ZM7.1 12H6a4 4 0 0 0-4 4 2 2 0 0 0 2 2h.5a5.998 5.998 0 0 1 3.071-5.238A5.505 5.505 0 0 1 7.1 12Z" clip-rule="evenodd"/>
+            </svg>
+          </div>
+          <div class="grid row-span-1">
+            <p class="text-white"> New User ? </p>
+          </div>
+        </div>
+      </a>
+
+      @if (message != null){
+      <div class="mb-3 items-center flex justify-content-center">
         <button class="button">
           <span>{{ message }}</span>
           <span>
@@ -10,11 +24,7 @@
         </button>
       </div>
     }
-    <div class="mb-5 items-center flex justify-content-center">
-      <a routerLink="/newuser" routerLinkActive="active" ariaCurrentWhenActive="page">
-        <button class="flex mx-auto mt-3 text-white bg-green-900 border-0 py-2 px-5 rounded">New user</button>
-      </a>
-    </div>
+
 
     <div class="flex flex-wrap -mx-4 -mb-10 text-center">
       @for (item of users$ | async ; track item.id){
@@ -44,6 +54,10 @@
       </div>
     }
     -->
-
+    } @placeholder (minimum 500ms){
+      <div class="flex px-5 py-10 justify-items-center">
+        <div class="loader"></div>
+      </div>
+    }
   </div>
 </section>
